# Practicas-Profecionalizantes-TP1

./: EXERCISE.md  INSTRUCTIONS.md  pyproject.toml  test.db
app/: load_data.py  main.py
tests/: test_api.py
